# agent-run

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  config.demo.yaml  deepseek-pricing.json  default.nix  flake.nix  nvchecker.toml  shell.nix
docs/: notes.md
docs/tools/: claude-code.md  codex.md  crush.md  hermes-agent.md
scripts/: fetch-deepseek-pricing.py
src/: agent.rs  catalog.rs  cli.rs  completion.rs  config.rs  error.rs  hook.rs  main.rs  model.rs  model_lua.rs  protocol.rs
src/model.d/: openrouter.lua
src/statusline/: cache.rs  context.rs  lua_engine.rs  mod.rs
src/statusline-providers/: 00-model.lua  10-cwd.lua  20-context.lua  30-deepseek.lua  30-glm.lua  30-kimi.lua  30-minimax.lua  30-openrouter.lua  _util.lua
