[package]
name = "agent-run"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = { version = "4.6.3", features = ["unstable-dynamic"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
toml = "0.9.8"
